--- a/Disys/replication.ipynb
+++ b/Disys/replication.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### BJARKE BRODIN - DISYS 2020 "
+    "##### BJARKE BRODIN - DISYS 2020"
    ]
   },
   {
@@ -32,18 +32,25 @@
     "\n",
     "#### Increased availability\n",
     "server failures, network partitions? disconneted operation?\n",
-    ""
+    "\n",
+    "We talk about the availability of an _object or service_ as the probability that it is available, or equivalently, the percentage of time during which it is available.\n",
+    "\n",
+    "For some service $s$ being served by $n$ servers each with an independent probability of failure $p$, we get that the availability $A(s) = 1 - p^n$. That is, $s$ i available at all times, except only when all $n$ servers are down.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Availabilty\n",
+    "## Phases of request to replicated service\n",
     "\n",
-    "We talk about the availability of an _object or service_ as the probability that it is available, or equivalently, the percentage of time during which it is available.\n",
+    "- Request\n",
+    "- Coordination (FIFO, Causal, Total)\n",
+    "- Execution\n",
+    "- Agreement\n",
+    "- Response\n",
     "\n",
-    "For some service $s$ being served by $n$ servers each with an independent probability of failure $p$, we get that the availability $A(s) = 1 - p^n$. That is - $s$ i available at all times, except only when all $n$ servers are down."
+    ""
    ]
   },
   {
