--- a/Indbs/w8/w8.ipynb
+++ b/Indbs/w8/w8.ipynb
@@ -114,6 +114,20 @@
                 },
                 {
                     "output_type": "execute_result",
+                    "execution_count": 30,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "count"
+                                    }
+                                ]
+                            },
+                            "data": []
+                        },
+                        "text/html": "<table><tr><th>count</th></tr></table>"
+                    },
                     "metadata": {
                         "resultSet": {
                             "batchId": 0,
@@ -146,24 +160,6 @@
                             "id": 0,
                             "rowCount": 1
                         }
-                    },
-                    "execution_count": 30,
-                    "data": {
-                        "application/vnd.dataresource+json": {
-                            "schema": {
-                                "fields": [
-                                    {
-                                        "name": "count"
-                                    }
-                                ]
-                            },
-                            "data": []
-                        },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>count</th></tr>",
-                            "</table>"
-                        ]
                     }
                 }
             ],
@@ -196,6 +192,20 @@
                 },
                 {
                     "output_type": "execute_result",
+                    "execution_count": 31,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "count"
+                                    }
+                                ]
+                            },
+                            "data": []
+                        },
+                        "text/html": "<table><tr><th>count</th></tr></table>"
+                    },
                     "metadata": {
                         "resultSet": {
                             "batchId": 0,
@@ -228,24 +238,6 @@
                             "id": 0,
                             "rowCount": 1
                         }
-                    },
-                    "execution_count": 31,
-                    "data": {
-                        "application/vnd.dataresource+json": {
-                            "schema": {
-                                "fields": [
-                                    {
-                                        "name": "count"
-                                    }
-                                ]
-                            },
-                            "data": []
-                        },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>count</th></tr>",
-                            "</table>"
-                        ]
                     }
                 }
             ],
@@ -274,9 +266,7 @@
                 "\n",
                 "## CLUSTERING IS VERY IMPORTANT\n",
                 "\n",
-                "Unclustered indices are fine for point queries, but generally clustered implies more sequential IO which means less IOs (because prefetching will grab a page at a time and you will avoid having to read the same page more than once due to unlucky prefetches).\n",
-                "\n",
-                "<br>\n",
+                "Unclustered indices are fine for point queries, but generally clustered implies more sequential IO which means less IOs (because prefetching will grab a page at a time and you will avoid having to read the same page more than once due to unlucky prefetches).<span style=\"font-family: -apple-system, BlinkMacSystemFont, sans-serif;\">Clustered indices are constrained by the fact, that clustering the data by some attribute prevents you from clustering it on a different attribute - the new sort would overwrite the old sort...</span>\n",
                 "\n",
                 "### Retrieve M records, where M small:\n",
                 "\n",
@@ -285,14 +275,39 @@
                 "Unclustered - Probably M random reads\n",
                 "\n",
                 "### Retrieve M recores, where M large:\n",
+                "\n",
                 "Clustered - Probably M/pages sequental reads\n",
                 "\n",
-                "Unclustered - probably M random reads\n",
-                "\n",
-                ""
+                "Unclustered - probably M random reads"
             ],
             "metadata": {
                 "azdata_cell_guid": "db4e1f20-57d9-4a56-862f-ef2114fc9746"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## Index scan vs full table scan\n",
+                "\n",
+                "full table scan is constant - always O(n)\n",
+                "\n",
+                "Index scans on clustered indices are typically dominated by the amount of items returned\n",
+                "\n",
+                "Index scans on unclustered indices are fine for very narrow queries, but become very slow very fast if the return range grows."
+            ],
+            "metadata": {
+                "azdata_cell_guid": "d919dc9b-92e8-4773-a06a-fc2fb546c5ec"
+            }
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "## Covering indices\n",
+                "\n",
+                "We say that an index covering all attributes used in a query is called <em>covering</em>. Covering indices have the effect that queries can be done index-only, since the index values must be in ram, we never need to IO, eliminating the penalty of using unclustered indices. This means that covering indices should be unclustered because the clustering simply doesnt improve performance on a covering index."
+            ],
+            "metadata": {
+                "azdata_cell_guid": "3149cddd-97a9-46fd-884e-0c74ffeb7950"
             }
         }
     ]
