ex1, ex2 replication

--- a/Disys/replication.ipynb
+++ b/Disys/replication.ipynb
@@ -49,32 +49,112 @@
     "- Execution\n",
     "- Agreement\n",
     "- Response\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    ""
+    "---\n",
+    "\n",
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__18.1__ _Three computers together provide a replicated service. The manufacturers claim that\n",
+    "each computer has a mean time between failure of five days; a failure typically takes\n",
+    "four hours to fix. What is the availability of the replicated service?_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The availability of a replicated service provided by $n$ nodes with an independent probability $p$ of having failed at any given time is $1-p^n$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{aligned}\n",
+    "p &= \\cfrac{4}{24 * 5} \\implies\n",
+    "1-p^3=1-(\\cfrac{4}{24*5})^3=0.9999629629629629\n",
+    "\\end{aligned}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999629629629629"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1.0-Math.pow((4.0/(24*5)),3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ""
-   ],
-   "outputs": []
+    "__18.2__ _Explain why a multi-threaded server might not qualify as a state machine._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A _state machine_ ([Lamport 1978](https://lamport.azurewebsites.net/pubs/time-clocks.pdf), [Schneider 1990](https://www.cs.cornell.edu/fbs/publications/SMSurvey.pdf)) is roughly described as a process, whose execution is equivalent to performing operations in some strict sequence (Coulouris 2015)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If some parts of the server processing is multi-threaded, it may break the strictness of sequence constraint of the state machine definition. Considering all concurrency related issues when multi-threading, consequences could be:\n",
+    "- Race conditions could result in unexpected states, if for example multi-threading write operations. \n",
+    "- Thread starvation could easily result in the interleaving of the processing of multiple requests, this would trivially break the atomicity constraint of the state machine.\n",
+    "- In the worst case: deadlocks could entirely incapacitate the so-perceived state machine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".NET (C#)",
-   "language": "C#",
-   "name": ".net-csharp"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
-   "name": "C#",
-   "pygments_lexer": "csharp",
-   "version": "8.0"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.8+10-LTS"
   }
  },
  "nbformat": 4,
