--- a/Disys/replication.ipynb
+++ b/Disys/replication.ipynb
@@ -49,32 +49,28 @@
     "- Execution\n",
     "- Agreement\n",
     "- Response\n",
-    "\n",
-    ""
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    ""
-   ],
-   "outputs": []
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".NET (C#)",
-   "language": "C#",
-   "name": ".net-csharp"
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
   },
   "language_info": {
-   "file_extension": ".cs",
-   "mimetype": "text/x-csharp",
-   "name": "C#",
-   "pygments_lexer": "csharp",
-   "version": "8.0"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "15.0.1+9"
   }
  },
  "nbformat": 4,
