--- a/BDSA/MSC - Docker basics.ipynb
+++ b/BDSA/MSC - Docker basics.ipynb
@@ -16,16 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "REPOSITORY                TAG                 IMAGE ID            CREATED             SIZE\n",
-      "bjarkebrodin/cheers2019   latest              f7837a16173b        2 hours ago         4.01MB\n",
-      "hello-world               latest              bf756fb1ae65        10 months ago       13.3kB\n"
+      "Cannot connect to the Docker daemon at unix:///var/run/docker.sock. Is the docker daemon running?\r\n"
      ]
     }
    ],
@@ -96,11 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS                     PORTS               NAMES\n",
-      "21a6c89d7076        hello-world         \"/hello\"            4 seconds ago       Exited (0) 2 seconds ago                       thirsty_panini\n",
-      "ba9b2bd65ffd        hello-world         \"/hello\"            7 minutes ago       Exited (0) 7 minutes ago                       pedantic_bhaskara\n",
-      "9d40ddd1e94d        hello-world         \"/hello\"            2 hours ago         Exited (0) 2 hours ago                         serene_hawking\n",
-      "290e107054d8        hello-world         \"/hello\"            2 hours ago         Exited (0) 2 hours ago                         boring_nash\n"
+      "Cannot connect to the Docker daemon at unix:///var/run/docker.sock. Is the docker daemon running?\r\n"
      ]
     }
    ],
