--- a/DISYS/replication.ipynb
+++ b/DISYS/replication.ipynb
@@ -50,8 +50,6 @@
     "- Agreement\n",
     "- Response\n",
     "\n"
-<<<<<<< HEAD
-=======
    ]
   },
   {
@@ -62,14 +60,11 @@
     "---\n",
     "\n",
     "## Exercises"
->>>>>>> 410439ecedfb7c265e92e74ac44edc548a90af55
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-<<<<<<< HEAD
-=======
    "source": [
     "__18.1__ _Three computers together provide a replicated service. The manufacturers claim that\n",
     "each computer has a mean time between failure of five days; a failure typically takes\n",
@@ -138,14 +133,6 @@
     "- Thread starvation could easily result in the interleaving of the processing of multiple requests, this would trivially break the atomicity constraint of the state machine.\n",
     "- In the worst case: deadlocks could entirely incapacitate the so-perceived state machine."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> 410439ecedfb7c265e92e74ac44edc548a90af55
-   "source": []
   }
  ],
  "metadata": {
@@ -160,7 +147,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.8+10-LTS"
+   "version": "15.0.1+9"
   }
  },
  "nbformat": 4,
