add relational model and fiddle with sql

--- a/INDBS/Weekly/w1/ex1.ipynb
+++ b/INDBS/Weekly/w1/ex1.ipynb
@@ -8,7 +8,8 @@
         "language_info": {
             "name": "sql",
             "version": ""
-        }
+        },
+        "connection_name": "Week 1 - Exercies"
     },
     "nbformat_minor": 2,
     "nbformat": 4,
@@ -184,12 +185,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.086"
+                        "text/html": "Total execution time: 00:00:00.151"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 7
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
@@ -247,12 +248,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.006"
+                        "text/html": "Total execution time: 00:00:00.007"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 13
+            "execution_count": 2
         },
         {
             "cell_type": "markdown",
@@ -282,14 +283,71 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.007"
+                        "text/html": "Total execution time: 00:00:00.010"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
-                    "execution_count": 16,
+                    "metadata": {
+                        "resultSet": {
+                            "batchId": 0,
+                            "columnInfo": [
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "name",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "name",
+                                    "columnOrdinal": 0,
+                                    "columnSize": -1,
+                                    "dataType": "varchar",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                },
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "manufacturer",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "manufacturer",
+                                    "columnOrdinal": 1,
+                                    "columnSize": -1,
+                                    "dataType": "varchar",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                }
+                            ],
+                            "complete": true,
+                            "id": 0,
+                            "rowCount": 2
+                        }
+                    },
+                    "execution_count": 3,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -302,28 +360,17 @@
                                     }
                                 ]
                             },
-                            "data": [
-                                {
-                                    "0": "hacienda esmaralda",
-                                    "1": "coffee collective"
-                                },
-                                {
-                                    "0": "best coffee ever",
-                                    "1": "good coffee farm"
-                                }
-                            ]
+                            "data": []
                         },
                         "text/html": [
                             "<table>",
                             "<tr><th>name</th><th>manufacturer</th></tr>",
-                            "<tr><td>hacienda esmaralda</td><td>coffee collective</td></tr>",
-                            "<tr><td>best coffee ever</td><td>good coffee farm</td></tr>",
                             "</table>"
                         ]
                     }
                 }
             ],
-            "execution_count": 16
+            "execution_count": 3
         },
         {
             "cell_type": "code",
@@ -347,14 +394,167 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.011"
+                        "text/html": "Total execution time: 00:00:00.010"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
-                    "metadata": {},
-                    "execution_count": 17,
+                    "metadata": {
+                        "resultSet": {
+                            "batchId": 0,
+                            "columnInfo": [
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "name",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "name",
+                                    "columnOrdinal": 0,
+                                    "columnSize": -1,
+                                    "dataType": "varchar",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                },
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "address",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "address",
+                                    "columnOrdinal": 1,
+                                    "columnSize": -1,
+                                    "dataType": "varchar",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                },
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "license",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "license",
+                                    "columnOrdinal": 2,
+                                    "columnSize": -1,
+                                    "dataType": "varchar",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                },
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "coffeehouse",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "coffeehouse",
+                                    "columnOrdinal": 3,
+                                    "columnSize": -1,
+                                    "dataType": "varchar",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                },
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "coffee",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "coffee",
+                                    "columnOrdinal": 4,
+                                    "columnSize": -1,
+                                    "dataType": "varchar",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                },
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "price",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "price",
+                                    "columnOrdinal": 5,
+                                    "columnSize": 4,
+                                    "dataType": "float4",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                }
+                            ],
+                            "complete": true,
+                            "id": 0,
+                            "rowCount": 1
+                        }
+                    },
+                    "execution_count": 4,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -379,27 +579,17 @@
                                     }
                                 ]
                             },
-                            "data": [
-                                {
-                                    "0": "analog",
-                                    "1": "rued langgaards vej 7",
-                                    "2": "none",
-                                    "3": "analog",
-                                    "4": "best coffee ever",
-                                    "5": "15.0"
-                                }
-                            ]
+                            "data": []
                         },
                         "text/html": [
                             "<table>",
                             "<tr><th>name</th><th>address</th><th>license</th><th>coffeehouse</th><th>coffee</th><th>price</th></tr>",
-                            "<tr><td>analog</td><td>rued langgaards vej 7</td><td>none</td><td>analog</td><td>best coffee ever</td><td>15.0</td></tr>",
                             "</table>"
                         ]
                     }
                 }
             ],
-            "execution_count": 17
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
