--- a/INDBS/Weekly/w1/w1.ipynb
+++ b/INDBS/Weekly/w1/w1.ipynb
@@ -80,8 +80,72 @@
                 "azdata_cell_guid": "9e9f99a4-4e05-48cc-a807-5147f81a7ee7",
                 "tags": []
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.182"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 1
         },
         {
             "cell_type": "code",
@@ -110,20 +174,207 @@
                 "azdata_cell_guid": "3806303f-10cf-4ec4-809b-6e0241f444b6",
                 "tags": []
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.009"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 2
         },
         {
             "cell_type": "code",
             "source": [
-                "select 'hey';"
+                "select * from player;"
             ],
             "metadata": {
                 "azdata_cell_guid": "df7d9253-37d2-4659-9a18-f4170e5ee8d9",
                 "tags": []
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(2 row(s) affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.002"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {
+                        "resultSet": {
+                            "batchId": 0,
+                            "columnInfo": [
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "id",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "id",
+                                    "columnOrdinal": 0,
+                                    "columnSize": 4,
+                                    "dataType": "int4",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                },
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "name",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "name",
+                                    "columnOrdinal": 1,
+                                    "columnSize": 50,
+                                    "dataType": "varchar",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                },
+                                {
+                                    "_provider": "PGSQL",
+                                    "allowDbNull": null,
+                                    "baseCatalogName": null,
+                                    "baseColumnName": "email",
+                                    "baseSchemaName": null,
+                                    "baseServerName": null,
+                                    "baseTableName": null,
+                                    "columnName": "email",
+                                    "columnOrdinal": 2,
+                                    "columnSize": 50,
+                                    "dataType": "varchar",
+                                    "isAliased": null,
+                                    "isAutoIncrement": null,
+                                    "isExpression": null,
+                                    "isHidden": null,
+                                    "isIdentity": null,
+                                    "isKey": null,
+                                    "isReadOnly": false,
+                                    "isUnique": null,
+                                    "isUpdatable": false,
+                                    "numericPrecision": null,
+                                    "numericScale": null
+                                }
+                            ],
+                            "complete": true,
+                            "id": 0,
+                            "rowCount": 2
+                        }
+                    },
+                    "execution_count": 5,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "id"
+                                    },
+                                    {
+                                        "name": "name"
+                                    },
+                                    {
+                                        "name": "email"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "0": "1",
+                                    "1": "Bjarke",
+                                    "2": "bjarke@gmail.lulz"
+                                },
+                                {
+                                    "0": "2",
+                                    "1": "Markus",
+                                    "2": "mkus@hotmail.com"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>id</th><th>name</th><th>email</th></tr>",
+                            "<tr><td>1</td><td>Bjarke</td><td>bjarke@gmail.lulz</td></tr>",
+                            "<tr><td>2</td><td>Markus</td><td>mkus@hotmail.com</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 5
         },
         {
             "cell_type": "markdown",
